--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -273,6 +273,7 @@
             apikey = "{{apikey}}",
             divname = "aadhaar",
             permissions = ['vid', 'personal_data', 'address', 'photo'],
+            BTN_CLASS = "btn btn-warning",
             callback= showlogin,
         );
         // var aadharBtn = aadhaarInit("app-key","aadhaar", ["vid", "personal_data", "address", "photo"]);
