--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -280,6 +280,7 @@
         
         function logout(){
             localStorage.removeItem('data');
+            window.location.reload();
         }
         window.addEventListener("load",()=>showlogin());
         function showlogin(){
